--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -17,14 +17,7 @@
     </p>
 </div>
 {% if weather %}
-    {% if weather.is_raining() %}
-    REGN!
-    {% elif weather.is_snowing() %}
-    SNØØ!
-    {% endif %}
-    {% if weather.is_windy() %}
-    ... og VIND!
-    {% endif %}
+<div class="well well-small">
     <table class="table">
         <tr>
             <td>Status:</td>
@@ -47,24 +40,11 @@
             <td>{{ weather.wind_spd }} -  {{ weather.wind_dir }}</td>
         </tr>
     </table>
-{% endif %}
-<div class="well">
-    <h3>Relevante plagg:</h3>
-    <table class="table table-hover">
-        <thead>
-            <td>Navn</td>
-            <td>Score</td>
-        </thead>
-        <tbody>
-            {% for c in weather.check_clothes(user.owned_clothes()) %}
-                <tr>
-                    <td>{{ c.type }}</td>
-                    <td><strong>{{ c.score }}</strong></td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
 </div>
+{% endif %}
+{% if relevant %}
+    {% include "relevant_clothes.html" %}
+{% endif %}
 <div class="well">
     <h3>Mine plagg:</h3>
     {% for c in user.owned_clothes() %}
